Added support for ages instead of birthdate, Can run individual doctors

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ ChildWellness.Rproj
 .Rproj.user/F053E294/pcs/windowlayoutstate.pper
 .Rproj.user/F053E294/pcs/debug-breakpoints.pper
 .Rproj.user/F053E294/sdb/prop/INDEX
+*.pper
+.Rproj.user/F053E294/sdb/prop/INDEX
